# bullpen-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: agent.py  assets.py  assets_store.py  config.py  embeddings.py  ingest.py  main.py  podcast.py  retriever.py  schemas.py  security.py  summaries.py
data/: assets.json  bullpen_docs.json  episodes.sample.json  seed.json
demo/: assets.html  concierge.html  index.html  mock_server.py  og-card.html  podcast.html  run_live.sh
deploy/: com.bullpen.episode-sync.plist
discord_bot/: README.md  bot.py  client.py  format.py  requirements.txt
scripts/: extract_assets.py  fetch_bullpen_docs.py  fetch_episodes.py  ingest_concierge.py  ingest_episodes.py  make_gif.mjs  make_gif2.mjs  make_gif3.mjs  make_gif4.mjs  make_og_image.mjs  redteam.py  summarize_episodes.py  sync_latest.py
tests/: conftest.py  test_agent_request.py  test_api.py  test_asset_extraction.py  test_assets_store.py  test_chunkers.py  test_demo_routing.py  test_discord_bot.py  test_kb_data.py  test_retriever.py  test_search_upgrades.py  test_security.py  test_vtt_parser.py
widget/: bullpen-concierge.js
